--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,9 @@ phases:
 #                          - sed -i 's|mongodb://localhost/conduit|'$mongo_url'|' app.js
                          - echo "NODE_ENV=production" > .env
                          - echo "MONGODB_URI=$mongo_url" >> .env
+                         - echo "PORT=3000" >> .env
                          - cat .env
+                         - ls -al
         post_build:
                 commands:
                         - cat app.js
