--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,7 @@ phases:
                          - echo "NODE_ENV=production" > .env
                          - echo "MONGODB_URI=$mongo_url" >> .env
                          - echo "PORT=3000" >> .env
+                         - echo "SECRET=c494aab3-af14-4797-86cc-78a2307e999f" >> .env
                          - cat .env
                          - ls -al
         post_build:
