--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "1.15.0",
     "cors": "2.7.1",
+    "dotenv": "^16.0.3",
     "ejs": "2.4.1",
     "errorhandler": "1.4.3",
     "express": "4.13.4",
