--- a/appspec.yml
+++ b/appspec.yml
@@ -1,27 +1,23 @@
 version: 0.0
 os: linux
-runas: aadesh
+runas: app
 
 files:
   - source: /
-    destination: /home/aadesh/node-express-realworld-example-app
+    destination: /app/
     overwrite: true
-    timeout: 300
 
 hooks:
-  BeforeInstall:
-    - location: scripts/install.sh
-      timeout: 300
-      runas: aadesh
+
   ApplicationStop:
     - location: scripts/stop_script.sh
       timeout: 300
-      runas: aadesh
+      runas: app
   ApplicationStart:
     - location: scripts/start_script.sh
       timeout: 300
-      runas: aadesh
+      runas: app
   ValidateService:
     - location: scripts/validate_service.sh
       timeout: 300
-      runas: aadesh
+      runas: app
